<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExamAndro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnregister">Register</string>
    <string name="btnlogin">Login</string>
    <string name="user">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btnvery">Verify</string>
    <string name="btndisplay">Display</string>
    <string name="btnback">Back</string>
    <string name="chkbox">Show Password</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="title_activity_register_screen">RegisterScreenActivity</string>

</resources>
