<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/lightpink">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black" 
        android:layout_marginLeft="30sp"/>

    <EditText
        android:id="@+id/etuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black" 
        android:layout_marginLeft="30sp" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/chkpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkbox" />

    <Button
        android:id="@+id/btnverify"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/btnvery"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/btnback"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
