<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightpink" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black" 
        android:layout_marginLeft="30sp"/>

    <EditText
        android:id="@+id/etreguser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" 
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black" 
        android:layout_marginLeft="30sp" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black" 
        android:layout_marginLeft="30sp" />

    <EditText
        android:id="@+id/etregpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btndisplay"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/btndisplay"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnregback"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="15dp"
        android:text="@string/btnback"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
